plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.2'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'cosmin.hosu'
version = '1.0'

java {
	sourceCompatibility = '17'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

jar {
	enabled = true
	manifest {
		attributes 'mainClass': 'cosmin.hosu.car.CarRentalApplication'
	}
}

springBoot {
	mainClass = 'cosmin.hosu.car.CarRentalApplication'
}

subprojects {
	apply plugin: 'java'
	apply plugin: 'java-library'

	group 'cosmin.hosu'
	version '1.0'

	java {
		sourceCompatibility = '17'
	}

	configurations {
		compileOnly.extendsFrom annotationProcessor
	}

	repositories {
		mavenCentral()
		mavenLocal()
	}

	dependencies {
		annotationProcessor 'org.projectlombok:lombok:1.18.30'
		compileOnly 'org.projectlombok:lombok:1.18.30'
		implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '3.2.2'
		implementation group: 'org.mapstruct', name: 'mapstruct', version: '1.5.3.Final'
		implementation group: 'org.mapstruct', name: 'mapstruct-processor', version: '1.5.3.Final'
		testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '3.2.2'
		annotationProcessor group: 'org.mapstruct', name: 'mapstruct-processor', version: '1.5.3.Final'
		implementation 'org.springframework.boot:spring-boot-starter-cache:3.2.2'
		implementation 'com.github.ben-manes.caffeine:caffeine:3.1.8'
	}

	test {
		useJUnitPlatform()
	}
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	runtimeOnly 'org.postgresql:postgresql'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

